# bibt-gcp-asset

./: .bumpversion.cfg  bumpversion.cfg  catalog-info.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yaml
bibt/gcp/asset/: classes.py
