[metadata]
name = bibt-gcp-asset
version = 0.1.0
author = Matthew OBrien
author_email = mobrien@broadinstitute.org
description = Functionality often used by BITS Blue Team (GCP Asset Module).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/broadinstitute/bibt-gcp-asset
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    google-cloud-asset
zip_safe = True
